--- a/public/saved.html
+++ b/public/saved.html
@@ -42,7 +42,7 @@
 
         <div class="row container" id="noarticle">
             <div class="col s12">
-                <p class="flow-text">Uh ah there is no articles to show!</p>
+                <p class="flow-text">You haven't Saved Any</p>
             </div>
         </div>
 
